@@ -79,6 +79,7 @@ isc_ratelimiter_create(isc_mem_t *mctx, isc_timermgr_t *timermgr,
 	result = isc_mutex_init(&rl->lock);
 	if (result != ISC_R_SUCCESS)
 		goto free_mem;
+
 	result = isc_timer_create(timermgr, isc_timertype_inactive,
 				  NULL, NULL, rl->task, ratelimiter_tick,
 				  rl, &rl->timer);
@@ -109,6 +110,10 @@ free_mem:
 isc_result_t
 isc_ratelimiter_setinterval(isc_ratelimiter_t *rl, isc_interval_t *interval) {
 	isc_result_t result = ISC_R_SUCCESS;
+
+	REQUIRE(rl != NULL);
+	REQUIRE(interval != NULL);
+
 	LOCK(&rl->lock);
 	rl->interval = *interval;
 	/*
@@ -124,6 +129,9 @@ isc_ratelimiter_setinterval(isc_ratelimiter_t *rl, isc_interval_t *interval) {
 
 void
 isc_ratelimiter_setpertic(isc_ratelimiter_t *rl, isc_uint32_t pertic) {
+
+	REQUIRE(rl != NULL);
+
 	if (pertic == 0)
 		pertic = 1;
 	rl->pertic = pertic;
@@ -136,8 +144,9 @@ isc_ratelimiter_enqueue(isc_ratelimiter_t *rl, isc_task_t *task,
 	isc_result_t result = ISC_R_SUCCESS;
 	isc_event_t *ev;
 
-	REQUIRE(eventp != NULL && *eventp != NULL);
+	REQUIRE(rl != NULL);
 	REQUIRE(task != NULL);
+	REQUIRE(eventp != NULL && *eventp != NULL);
 	ev = *eventp;
 	REQUIRE(ev->ev_sender == NULL);
 
@@ -162,6 +171,22 @@ isc_ratelimiter_enqueue(isc_ratelimiter_t *rl, isc_task_t *task,
 	UNLOCK(&rl->lock);
 	if (*eventp != NULL && result == ISC_R_SUCCESS)
 		isc_task_send(task, eventp);
+	return (result);
+}
+
+isc_result_t
+isc_ratelimiter_dequeue(isc_ratelimiter_t *rl, isc_event_t *event) {
+	isc_result_t result = ISC_R_SUCCESS;
+
+	REQUIRE(rl != NULL);
+	REQUIRE(event != NULL);
+
+	LOCK(&rl->lock);
+	if (ISC_LINK_LINKED(event, ev_link))
+		ISC_LIST_UNLINK(rl->pending, event, ev_link);
+	else
+		result = ISC_R_NOTFOUND;
+	UNLOCK(&rl->lock);
 	return (result);
 }
 
@@ -211,6 +236,9 @@ void
 isc_ratelimiter_shutdown(isc_ratelimiter_t *rl) {
 	isc_event_t *ev;
 	isc_task_t *task;
+
+	REQUIRE(rl != NULL);
+
 	LOCK(&rl->lock);
 	rl->state = isc_ratelimiter_shuttingdown;
 	(void)isc_timer_reset(rl->timer, isc_timertype_inactive,
@@ -222,6 +250,7 @@ isc_ratelimiter_shutdown(isc_ratelimiter_t *rl) {
 		isc_task_send(task, &ev);
 	}
 	isc_timer_detach(&rl->timer);
+
 	/*
 	 * Send an event to our task.  The delivery of this event
 	 * indicates that no more timer events will be delivered.
@@ -249,6 +278,7 @@ ratelimiter_free(isc_ratelimiter_t *rl) {
 
 void
 isc_ratelimiter_attach(isc_ratelimiter_t *source, isc_ratelimiter_t **target) {
+
 	REQUIRE(source != NULL);
 	REQUIRE(target != NULL && *target == NULL);
 
@@ -262,9 +292,13 @@ isc_ratelimiter_attach(isc_ratelimiter_t *source, isc_ratelimiter_t **target) {
 
 void
 isc_ratelimiter_detach(isc_ratelimiter_t **rlp) {
-	isc_ratelimiter_t *rl = *rlp;
+	isc_ratelimiter_t *rl;
 	isc_boolean_t free_now = ISC_FALSE;
 
+	REQUIRE(rlp != NULL && *rlp != NULL);
+
+	rl = *rlp;
+	
 	LOCK(&rl->lock);
 	REQUIRE(rl->refs > 0);
 	rl->refs--;
@@ -281,6 +315,8 @@ isc_ratelimiter_detach(isc_ratelimiter_t **rlp) {
 isc_result_t
 isc_ratelimiter_stall(isc_ratelimiter_t *rl) {
 	isc_result_t result = ISC_R_SUCCESS;
+
+	REQUIRE(rl != NULL);
 
 	LOCK(&rl->lock);
 	switch (rl->state) {
@@ -304,6 +340,8 @@ isc_ratelimiter_stall(isc_ratelimiter_t *rl) {
 isc_result_t
 isc_ratelimiter_release(isc_ratelimiter_t *rl) {
 	isc_result_t result = ISC_R_SUCCESS;
+
+	REQUIRE(rl != NULL);
 
 	LOCK(&rl->lock);
 	switch (rl->state) {
